# ml-deploy-fastapi

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/ml_deploy_fastapi.egg-info/: SOURCES.txt  requires.txt
src/mldeploy/: main.py  model.py  schemas.py
tests/: test_api.py
