[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-deploy-fastapi"
version = "0.1.0"
description = "Serve a trained ML model with FastAPI (predict endpoint)."
authors = [{ name = "Aswin Tony" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "pydantic",
    "joblib"
]

[project.optional-dependencies]
dev = ["pytest", "requests"]
