[metadata]
name = ml-deploy-fastapi
version = 0.1.0
description = Serve a trained ML model with FastAPI (predict endpoint).
author = Aswin Tony
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
include_package_data = true

[options.packages.find]
where = src
